# SDL_Gravity_Box

./: .gitignore  01_hello_SDL  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
inc/: entity.hpp  input.hpp  math.hpp  renderwindow.hpp
res/img/: Sprite-0001.aseprite  Sprite-0002-Recovered.aseprite
src/: 01_hello_SDL  entity.cpp  input.cpp  main.cpp  renderwindow.cpp
